--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,5 +1,16 @@
 @import 'tailwindcss';
+@plugin '@tailwindcss/forms';
 
-@import '@skeletonlabs/skeleton'; 
+/* ...Skeleton config here... */
+
+@import '@skeletonlabs/skeleton';
 @import '@skeletonlabs/skeleton-svelte'; 
 @import '@skeletonlabs/skeleton/themes/nouveau';
+
+.select,
+.input,
+.textarea,
+.input-group {
+	background-color: var(--color-surface-50-950);
+	color: var(--color-surface-950-50);
+}
